5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4363/executions/1670_2970.log
== TEST (2019-04-16 19:07:37) 
-- CODE:
a = input("tempo de investimentos")

-- OUTPUT:
Nao
1.26
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:09:32) 
-- CODE:
a = input("tempo de investimentos")
i=((q/f)**t)-1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i=((q/f)**t)-1
NameError: name 'q' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:10:29) 
-- CODE:
t = input("tempo de investimentos")
i=((q/f)**1/t)-1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i=((q/f)**1/t)-1
NameError: name 'q' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:12:22) 
-- CODE:
t = int(input("tempo de investimentos"))
i=((1042000/1500)**1/t)-1


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i=((q/f)**1/t)-1
NameError: name 'q' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:12:35) 
-- CODE:
t = int(input("tempo de investimentos"))
i=((1042000/1500)**1/t)-1

print(i)
-- OUTPUT:
0.05572441742654499
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:12:43) 
-- CODE:
t = int(input("tempo de investimentos"))
i=((1042000/1500)**1/t)-1

print(i)
-- OUTPUT:
0.05572441742654499
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:12:48) 
-- CODE:
t = int(input("tempo de investimentos"))
i=((1042000/1500)**1/t)-1

print(i)
-- OUTPUT:
0.05572441742654499
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:16:48) 
-- CODE:
t = int(input("tempo de investimento em meses"))
i=((1042000/1500)**1/t)-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- OUTPUT:
0.05572
irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:17:33) 
-- CODE:
t = int(input("tempo de investimento em meses"))
i=(1042000/1500**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- OUTPUT:
1030482.00234
irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:18:08) 
-- CODE:
t = int(input("tempo de investimento em meses"))
i=(1042000/1500**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- EXECUTION TIME:
0.227206
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
1030482.00234
irreal
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
1028598.52281
irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
1010726.32123
irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:19:10) 
-- CODE:
t = int(input("tempo de investimento em meses"))
i=(1042000/1500**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- OUTPUT:
1030482.00234
irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:19:27) 
-- CODE:
t = int(input("tempo de investimento em meses"))
i=(1042000/1500**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- OUTPUT:
1030482.00234
irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:20:31) 
-- CODE:
t = int(input("tempo de investimento em meses"))
f=1042000
i=1500.00
i=(f/i**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- OUTPUT:
1030482.00234
irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:20:56) 
-- CODE:
t = int(input("tempo de investimento em meses"))
f=1042000
i=1500.00
i=((f/i**(1/t))-1)
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- OUTPUT:
1030482.00234
irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:22:00) 
-- CODE:
t = int(input("tempo de investimento em meses"))
f=1042000
i=1500.00
i=((f/i**(1/t))-1)
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- OUTPUT:
1030482.00234
irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:22:04) 
-- CODE:
t = int(input("tempo de investimento em meses"))
f=1042000
i=1500.00
i=((f/i**(1/t))-1)
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- EXECUTION TIME:
0.11914
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
1030482.00234
irreal
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
1028598.52281
irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
1010726.32123
irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:22:16) 
-- CODE:
t = int(input("tempo de investimento em meses"))
f=1042000
i=1500.00
i=(f/i**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- OUTPUT:
1030482.00234
irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:22:38) 
-- CODE:
t = int(input("tempo de investimento em meses"))
f=1042000
i=1500.00
i=(f/i**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- OUTPUT:
1030482.00234
irreal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:23:46) 
-- CODE:
t = int(input("tempo de investimento em meses"))
f=1042000
i=1500.00
i=((f/i)**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- OUTPUT:
0.00999
real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:23:55) 
-- CODE:
t = int(input("tempo de investimento em meses"))
f=1042000
i=1500.00
i=((f/i)**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- EXECUTION TIME:
0.263934
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.00999
real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.01165
irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.02764
irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:24:03) 
-- CODE:
t = int(input("tempo de investimento em meses"))
f=1042000
i=1500.00
i=((f/i)**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- OUTPUT:
0.00999
real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:24:09) 
-- CODE:
t = int(input("tempo de investimento em meses"))
f=1042000
i=1500.00
i=((f/i)**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- EXECUTION TIME:
0.108369
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.00999
real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.01165
irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.02764
irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:24:45) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=((Qf/Qo)**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- OUTPUT:
0.00999
real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:24:46) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=((Qf/Qo)**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- EXECUTION TIME:
0.159747
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.00999
real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.01165
irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.02764
irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:24:47) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=((Qf/Qo)**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- OUTPUT:
0.00999
real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:25:13) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=((Qf/Qo)**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
float(print(round(i,5)))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    float(print(round(i,5)))
TypeError: float() argument must be a string or a number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:25:14) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=((Qf/Qo)**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
float(print(round(i,5)))
print(a)

-- EXECUTION TIME:
0.128645
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/2970/main.py", line 9, in <module>
    float(print(round(i,5)))
TypeError: float() argument must be a string or a number, not 'NoneType'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:25:15) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=((Qf/Qo)**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
float(print(round(i,5)))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    float(print(round(i,5)))
TypeError: float() argument must be a string or a number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:25:25) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=((Qf/Qo)**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
float(print(round(i,5)))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    float(print(round(i,5)))
TypeError: float() argument must be a string or a number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:25:33) 
-- CODE:
t = input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=((Qf/Qo)**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5)))
print(a)

-- ERROR:
File "XXXX", line 1
    t = input())
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:25:38) 
-- CODE:
t = input("tempo de investimento em meses")
Qf=1042000
Qo=1500.00
i=((Qf/Qo)**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5)))
print(a)

-- ERROR:
File "XXXX", line 9
    print(round(i,5)))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:25:43) 
-- CODE:
t = input("tempo de investimento em meses")
Qf=1042000
Qo=1500.00
i=((Qf/Qo)**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    i=((Qf/Qo)**(1/t))-1
TypeError: unsupported operand type(s) for /: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:26:00) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=((Qf/Qo)**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- OUTPUT:
0.00999
real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:26:03) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=((Qf/Qo)**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- EXECUTION TIME:
0.185194
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.00999
real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.01165
irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.02764
irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:26:05) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=((Qf/Qo)**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- EXECUTION TIME:
0.20771
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.00999
real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.00999
real
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.01165
irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:26:05) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=((Qf/Qo)**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- EXECUTION TIME:
0.189973
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.01165
irreal
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.00999
real
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.01165
irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:26:05) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=((Qf/Qo)**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- EXECUTION TIME:
0.206836
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.01165
irreal
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.00999
real
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:26:05) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=((Qf/Qo)**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- EXECUTION TIME:
0.384475
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.00999
real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.01165
irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:26:05) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=((Qf/Qo)**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- EXECUTION TIME:
0.387144
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1670/2970/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:26:07) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=((Qf/Qo)**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- EXECUTION TIME:
0.166234
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.00999
real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.01165
irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.02764
irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:26:53) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=((Qf/Qo)**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- OUTPUT:
0.00999
real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:26:55) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=((Qf/Qo)**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- EXECUTION TIME:
0.17022
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.00999
real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.01165
irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.02764
irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:26:56) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=((Qf/Qo)**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- EXECUTION TIME:
0.148114
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.00999
real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.00999
real
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.01165
irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:26:56) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=((Qf/Qo)**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- EXECUTION TIME:
0.275981
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.00999
real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.01165
irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.02764
irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:26:56) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=((Qf/Qo)**(1/t))-1
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- EXECUTION TIME:
0.245961
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.02764
irreal
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:

-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.02764
irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:27:25) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=(((Qf/Qo)**(1/t))-1)
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- OUTPUT:
0.00999
real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:27:28) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=(((Qf/Qo)**(1/t))-1)
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- EXECUTION TIME:
0.206039
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.00999
real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.01165
irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.02764
irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:27:29) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=(((Qf/Qo)**(1/t))-1)
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- EXECUTION TIME:
0.20332
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.00999
real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.00999
real
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.01165
irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:27:29) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=(((Qf/Qo)**(1/t))-1)
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- EXECUTION TIME:
0.186125
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.01165
irreal
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.00999
real
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:27:29) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=(((Qf/Qo)**(1/t))-1)
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- EXECUTION TIME:
0.213194
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.01165
irreal
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.00999
real
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.01165
irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:27:29) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=(((Qf/Qo)**(1/t))-1)
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- EXECUTION TIME:
0.441032
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.00999
real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:

-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:27:30) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=(((Qf/Qo)**(1/t))-1)
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- EXECUTION TIME:
0.391329
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1670/2970/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:27:41) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=(((Qf/Qo)**(1/t))-1)
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- OUTPUT:
0.00999
real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:27:58) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=(((Qf/Qo)**(1/t))-1)
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- OUTPUT:
0.00999
real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:28:04) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=(((Qf/Qo)**(1/t))-1)
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- OUTPUT:
0.00999
real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:28:07) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=(((Qf/Qo)**(1/t))-1)
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- OUTPUT:
0.00999
real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:28:27) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=(((Qf/Qo)**(1/t))-1)
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- OUTPUT:
0.00999
real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:28:27) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=(((Qf/Qo)**(1/t))-1)
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- OUTPUT:
0.00999
real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:28:30) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=(((Qf/Qo)**(1/t))-1)
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- OUTPUT:
0.00999
real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:28:38) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=(((Qf/Qo)**(1/t))-1)
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- OUTPUT:
0.00999
real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:28:42) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500.00
i=(((Qf/Qo)**(1/t))-1)
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- OUTPUT:
0.00999
real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:30:32) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500
i=(((Qf/Qo)**(1/t))-1)
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- OUTPUT:
0.00999
real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:30:36) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500
i=(((Qf/Qo)**(1/t))-1)
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- EXECUTION TIME:
0.164535
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.00999
real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.01165
irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.02764
irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:30:37) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500
i=(((Qf/Qo)**(1/t))-1)
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- EXECUTION TIME:
0.163013
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.00999
real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.01165
irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.02764
irreal
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:32:58) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500
i=(((Qf/Qo)**(1/t))-1)
if (i<=0.01):
 a = "real"
else:
 a = "irreal"
print(round(i,5))
print(a)

-- OUTPUT:
0.00999
real
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 19:33:33) 
-- CODE:
t = int(input("tempo de investimento em meses"))
Qf=1042000
Qo=1500
i=(((Qf/Qo)**(1/t))-1)
if (i<=0.01):
 a = "Real"
else:
 a = "Irreal"
print(round(i,5))
print(a)

-- EXECUTION TIME:
0.146906
-- TEST CASE 1:
---- input:
658
---- correct output:
0.00999
Real
---- user output:
0.00999
Real
-- TEST CASE 2:
---- input:
565
---- correct output:
0.01165
Irreal
---- user output:
0.01165
Irreal
-- TEST CASE 3:
---- input:
240
---- correct output:
0.02764
Irreal
---- user output:
0.02764
Irreal
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
